--- a/index.html
+++ b/index.html
@@ -1,355 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Google Tag Manager -->
-      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-KVP3SZS');</script>
-    <!-- End Google Tag Manager -->
-    <!-- Hotjar Tracking Code for https://horzu.github.io -->
-    <script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:2674164,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="google-site-verification" content="Hsqk7CPafoHOgvzXJnCayBWm2eAItM6Nu1jqMPuuYNQ" />
-    <meta name="ahrefs-site-verification" content="7cfa94fc4d089adf00c678ff0bb6a000a630210130d3e2a21077c6d9f8635616">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="mert, şakar, mert şakar, front-end, web, website, computer, software, developer, engineer, designer" />
-    <meta name="author" content="Mert Şakar" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
-    <script src="https://kit.fontawesome.com/2b56eff395.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Mert Şakar | Web Developer</title>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KVP3SZS"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div id="content">
-      <!--Navigation Bar-->
-      <nav class="navbar navbar-dark bg-dark navbar-expand-lg text-white fixed-top">
-        <div class="container">
-          <a href="#content" class="navbar-brand"> 
-            <img src="./sources/default-monochrome-white.svg" alt="Mert Şakar's logo"> </img>
-          </a>
-
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbar-head"
-            aria-controls="navbar-head"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbar-head">
-            <ul class="navbar-nav ms-auto mx-3">
-              <li class="nav-item">
-                <a href="#about" class="nav-link text-white">About</a>
-              </li>
-              <li class="nav-item">
-                <a href="#work" class="nav-link text-white">Work</a>
-              </li>
-              <li class="nav-item">
-                <a href="#skills" class="nav-link text-white">Skills</a>
-              </li>
-              <li class="nav-item">
-                <a href="#contact" class="nav-link text-white">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!--Intoduction section-->
-      <section id="intro" class="text-center">
-        <div id="overlay">
-          <div class="intro-content" id="greet">
-            <h2 class="animate__animated animate__fadeInDown">HELLO, I'M MERT</h2>
-            <p class="animate__animated animate__fadeInUp">Engineer, Web developer & Web/Mobile App enthusiast</p>
-          </div>
-        </div>
-      </section>
-
-      <!--About section-->
-      <section id="about">
-        <div class="container">
-          <div class="row text-center">
-            <div class="col-md-8 offset-md-2">
-              <h2>ABOUT ME</h2>
-              <img src="./sources/images/profile-pic.jpg" alt="Mert Şakar's photo" class="img-responsive" />
-              <p>
-                Hi! I am Mert! I am an Industrial Engineer and I have a M.Sc. in International Trade and Finance. I have more than 5 years of experience as
-                Industrial Engineer.
-              </p>
-              <p>
-                I used programming for problems that I encountered in my career. I developed little programs to automate daily tasks. After a while I realised
-                most exciting parts of my career was those moments when I create programs. So, I decided to change my career to tech.
-              </p>
-              <p>I'm a self-taught front-end developer with passion for web development and mobile app development. I enjoy building responsive, pixel perfect websites with proper UI/UX.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!--Work section-->
-      <section id="work">
-        <div class="container">
-          <div class="row text-center p-1">
-            <h2>PROJECTS</h2>
-            <p>Here are some of my work.</p>
-          </div>
-          <div class="row d-flex justify-content-evenly mb-5">
-            <h3 class="text-center">Real Life Projects</h3>
-            <div class="card m-2">
-              <img src="./sources/images/ius.png" class="card-img-top my-2 border border-dark" alt="ius turkey website image" />
-              <div class="card-body">
-                <h5 class="card-title"><strong>IUS Turkey Webpage</strong></h5>
-                <p class="card-text">A webpage for IUS Turkey. It is a university consultancy firm's webpage.</p>
-              </div>
-              <div class="card-footer bg-white border-white">
-                <div class="row">
-                  <a href="https://www.bosnaedu.com/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
-                </div>
-              </div>
-            </div>
-
-           
-
-            <div class="card m-2">
-              <img src="./sources/images/meetthemusic.png" class="card-img-top my-2 border border-dark" alt="meet the music website template image" />
-              <div class="card-body">
-                <h5 class="card-title"><strong>Meet the Music Webpage Template</strong></h5>
-                <p class="card-text">A new website template created for Meet the Music App's website while working with them voluntarily.</p>
-              </div>
-              <div class="card-footer bg-white border-white">
-                <div class="row">
-                  <a href="https://horzu.github.io/mtm-new/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-evenly">
-            <h3 class="text-center">Side Projects</h3>
-            <div class="card m-2">
-              <img src="./sources/images/voice-assistant-news.png" class="card-img-top my-2 border border-dark" alt="voice-assistant-news live website image" />
-              <div class="card-body">
-                <h5 class="card-title"><strong>Voice Assistant News App</strong></h5>
-                <p class="card-text">A news site with voice assistant AI.</p>
-              </div>
-              <div class="card-footer bg-white border-white">
-                <div class="row">
-                  <a href="https://horzu.github.io/voice-assistant-news/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
-                  <a href="https://github.com/horzu/voice-assistant-news" target="_blank" class="btn btn-secondary">View Source</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card m-2">
-              <img src="./sources/images/chat-app.png" class="card-img-top my-2 border border-dark" alt="chat-app live website image" />
-              <div class="card-body">
-                <h5 class="card-title"><strong>Chat App</strong></h5>
-                <p class="card-text">A demo chat-app with authantication.</p>
-              </div>
-              <div class="card-footer bg-white border-white">
-                <div class="row">
-                  <a href="https://horzu.github.io/chat-app/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
-                  <a href="https://github.com/horzu/chat-app" target="_blank" class="btn btn-secondary">View Source</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card m-2">
-              <img src="./sources/images/budget-tracker.png" class="card-img-top my-2 border border-dark" alt="budget-tracker live website image" />
-              <div class="card-body">
-                <h5 class="card-title"><strong>Budget Tracker App</strong></h5>
-                <p class="card-text">A budget tracker app that you can see your expenses, budget and total spent amount.</p>
-              </div>
-              <div class="card-footer bg-white border-white">
-                <div class="row">
-                  <a href="https://horzu.github.io/budget-tracker/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
-                  <a href="https://github.com/horzu/budget-tracker" target="_blank" class="btn btn-secondary">View Source</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card m-2">
-              <img src="./sources/images/e-commerce.png" class="card-img-top my-2 border border-dark" alt="e-commerce live website image" />
-              <div class="card-body">
-                <h5 class="card-title"><strong>e-commerce Demo</strong></h5>
-                <p class="card-text">A demo e-commerce store with payment and shipping options.</p>
-              </div>
-              <div class="card-footer bg-white border-white">
-                <div class="row">
-                  <a href="https://horzu.github.io/e-commerce/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
-                  <a href="https://github.com/horzu/e-commerce" target="_blank" class="btn btn-secondary">View Source</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card m-2">
-              <img src="./sources/images/Javascript Calculator.png" class="card-img-top my-2 border border-dark" alt="Drum Machine live website image" />
-              <div class="card-body">
-                <h5 class="card-title"><strong>Calculator</strong></h5>
-                <p class="card-text">A calculator app created with React. Allows multiple inputs and evaluates final solution.</p>
-              </div>
-              <div class="card-footer bg-white border-white">
-                <div class="row">
-                  <a href="https://horzu.github.io/calculator/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
-                  <a href="https://github.com/horzu/calculator" target="_blank" class="btn btn-secondary">View Source</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card m-2">
-              <img src="./sources/images/drum-machine.png" class="card-img-top my-2 border border-dark" alt="Drum Machine live website image" />
-              <div class="card-body">
-                <h5 class="card-title"><strong>Drum Machine</strong></h5>
-                <p class="card-text">A virtual drum machine app created with React. Different audio banks, volume, tempo and replay features.</p>
-              </div>
-              <div class="card-footer bg-white border-white">
-                <div class="row">
-                  <a href="https://horzu.github.io/drum-machine-3/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
-                  <a href="https://github.com/horzu/drum-machine-3" target="_blank" class="btn btn-secondary">View Source</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card m-2">
-              <img src="./sources/images/Random-quote-machine.png" class="card-img-top my-2 border border-dark" alt="Random Quote Machine live website image" />
-              <div class="card-body">
-                <h5 class="card-title"><strong>Random Quote Machine</strong></h5>
-                <p class="card-text">A random quote generator website. Font changes with each new quote.</p>
-              </div>
-              <div class="card-footer bg-white border-white">
-                <div class="row">
-                  <a href="https://horzu.github.io/random-quote-machine-2/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
-                  <a href="https://github.com/horzu/random-quote-machine-2" target="_blank" class="btn btn-secondary">View Source</a>
-                </div>
-              </div>
-            </div>
-            <div class="card m-2">
-              <img src="./sources/images/markdown-previewer.png" class="card-img-top my-2 border border-dark" alt="Markdownd previewer live website image" />
-              <div class="card-body">
-                <h5 class="card-title"><strong>Markdown Previwer</strong></h5>
-                <p class="card-text">A markdown previewer app created with react.</p>
-              </div>
-              <div class="card-footer bg-white border-white">
-                <div class="row">
-                  <a href="https://horzu.github.io/markdown-previewer-2/" target="_blank" class="btn btn-primary my-2">Visit Site</a>
-                  <a href="https://github.com/horzu/markdown-previewer-2" target="_blank" class="btn btn-secondary">View Source</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!--Skills section-->
-      <section id="skills">
-        <div class="container">
-          <div class="row p-1 text-center">
-            <h2 class="mb-4">SKILLS</h2>
-            <div data-aos="zoom-in" class="col-4">
-              <i data-aos="zoom-in" class="fab fa-html5 fs-1"></i>
-              <p>HTML</p>
-              <i data-aos="zoom-in" class="fab fa-css3-alt fs-1"></i>
-              <p>CSS</p>
-              <i data-aos="zoom-in" class="fab fa-js fs-1"></i>
-              <p>JAVASCRIPT</p>
-              <i data-aos="zoom-in" class="fab fa-python fs-1"></i>
-              <p>PYTHON</p>
-            </div>
-            <div data-aos="zoom-in" class="col-4">
-              <i data-aos="zoom-in" class="fab fa-react fs-1"></i>
-              <p>REACT</p>
-              <img data-aos="zoom-in" src="./sources/images/jquery (1).png" id="jquery-logo"></img>
-              <p>JQUERY</p>
-              <i data-aos="zoom-in" class="fab fa-bootstrap fs-1"></i>
-              <p>BOOTSTRAP</p>
-              <i data-aos="zoom-in" class="fab fa-sass fs-1"></i>
-              <p>SASS</p>
-            </div>
-            <div data-aos="zoom-in" class="col-4">
-              <i data-aos="zoom-in" class="fab fa-git-square fs-1"></i>
-              <p>GIT</p>
-              <i data-aos="zoom-in" class="fab fa-github-square fs-1"></i>
-              <p>GITHUB</p>
-              <i data-aos="zoom-in" class="fas fa-terminal fs-1"></i>
-              <p>TERMINAL</p>
-              <i data-aos="zoom-in" class="fab fa-chrome fs-1"></i>
-              <p>CHROME DEV-TOOLS</p>
-              <i data-aos="zoom-in" class="fab fa-npm fs-1"></i>
-              <p>NPM</p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!--Contact section-->
-      <section id="contact">
-        <div class="container text-center">
-          <i class="fas fa-paper-plane my-5 animate__animated" id="airplane"></i>
-          <h2 class="mb-3">GET IN TOUCH!</h2>
-          <p>Have an interesting project for me?</p>
-          <p>Or you just want to say hello?</p>
-          <p>Please feel free to contact me.</p>
-          <div class="my-5">
-            <a href="mailto: mertsakar@hotmail.com" target="_blank">
-              <button type="button" class="btn btn-primary">Send E-mail</button>
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <!--Footer section-->
-      <footer class="bg-dark text-white p-1">
-        <div class="container text-center">
-          <div id="contact-icon" class="fs-3 my-3">
-            <a href="https://www.linkedin.com/in/mert-sakar/" target="_blank"><i class="fab fa-linkedin icon"></i></a>
-            <a href="https://github.com/horzu" target="_blank"><i class="fab fa-github icon"></i></a>
-            <a href="https://twitter.com/mert_sak_" target="_blank"><i class="fab fa-twitter icon"></i></a>
-            <a href="https://open.spotify.com/user/11123022282" target="_blank"><i class="fab fa-spotify"></i></a>
-            <a href="https://www.instagram.com/mertsakar/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/mert.sakar.315" target="_blank"><i class="fab fa-facebook-square"></i></a>
-          </div>
-
-          <p>Made with <span class="heart" style="color: red">♥</span> in Smyrna</p>
-          <p>© Mert Şakar 2021</p>
-        </div>
-      </footer>
-    </div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-      crossorigin="anonymous"
-    ></script>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <script>
-      AOS.init();
-    </script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/logo.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo.png"/><link rel="manifest" href="/manifest.json"/><title>Mert Şakar | Personal Webpage</title><script defer="defer" src="/static/js/main.86e72e01.js"></script><link href="/static/css/main.2a2d492d.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
